JSW Devsb/src/objects/Project_Site__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Project_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architect</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Influencer__c.Type__c</field>
                <operation>equals</operation>
                <value>Architects</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipLabel>Project Sites (Architect)</relationshipLabel>
        <relationshipName>Project_Sites2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Influencer__c.Type__c</field>
                <operation>equals</operation>
                <value>Builder office</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipLabel>Project Sites (Builder)</relationshipLabel>
        <relationshipName>Project_Sites3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Brands__c</fullName>
        <label>Competitor Brands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Stage__c</fullName>
        <label>Construction Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-construction stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearing completion</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Email_1__c</fullName>
        <label>Contact Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <label>Cntact Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_3__c</fullName>
        <label>Contact Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_1__c</fullName>
        <label>Contact Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_2__c</fullName>
        <label>Contact Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_3__c</fullName>
        <label>Contact Person 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_1__c</fullName>
        <label>Contact Phone 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_2__c</fullName>
        <label>Contact Phone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_3__c</fullName>
        <label>Contact Phone 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_1__c</fullName>
        <label>Contact Role 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_2__c</fullName>
        <label>Contact Role 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_3__c</fullName>
        <label>Contact Role 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipName>Project_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <label>End Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Influencer__c.Type__c</field>
                <operation>equals</operation>
                <value>Engineers</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipLabel>Project Sites</relationshipLabel>
        <relationshipName>Project_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JSW_Cement_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JSW Cement Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSW_Supply_Details__c</fullName>
        <label>JSW Supply Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Name_of_Concerned_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Concerned SO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Quantity_Required__c</fullName>
        <label>Product Quantity Required in MT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC &amp; CHD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Construction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Construction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Status__c</fullName>
        <label>Site Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Active</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Sub_Type__c</fullName>
        <label>Site Sub-Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Builder/Contractor SIte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt/Institutional SIte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structural_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Structural Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Influencer__c.Type__c</field>
                <operation>equals</operation>
                <value>Structural Consultants</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipLabel>Project Sites (Structural Consultant)</relationshipLabel>
        <relationshipName>Project_Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Project Sites (Territory)</relationshipLabel>
        <relationshipName>Project_Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>Project Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHB Sites</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipName>Project_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume_Potential_in_MT__c</fullName>
        <label>Volume Potential in MT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Sites</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>District__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>